done with landingsite, booking and facilites still needs work

--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+    <div class="wrapper">
+        <div class="wrapper__inner">
+            <header class="welcome">
+                <div class="welcome__inner">
+                    <h1>Welcome to Bonzai!</h1>
+                </div>
+            </header>
+
+            <nav class="menu">
+                <a href="Home">home</a>
+                <a href="Contact">contact</a>
+                <a href="Booking">booking</a>
+                <a href="Facilities">Facilities</a>
+            </nav>
+
+            <article class="about">
+                <div class="about__first">
+                    <img src="assets/photos/01-day.jpg" alt="day">
+                    <h2>Day</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam qui fuga provident voluptas unde? Et neque perspiciatis, quo asperiores nostrum, fuga illo repudiandae voluptate tenetur, quam exercitationem saepe voluptates accusamus?</p>
+                </div>
+                <div class="about__first">
+                    <img src="assets/photos/01-night.jpg" alt="day">
+                    <h2>Night</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam qui fuga provident voluptas unde? Et neque perspiciatis, quo asperiores nostrum, fuga illo repudiandae voluptate tenetur, quam exercitationem saepe voluptates accusamus?</p>
+                </div>
+                <div class="about__txt">
+                    <h2>About us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta molestiae recusandae suscipit architecto temporibus non voluptatum sint sequi nostrum possimus pariatur, consequatur dolorum ex at voluptatem dolorem excepturi mollitia ratione?         
+                    </p>
+                </div>
+            </article>
+            <footer class="footer__start">
+                <article class="Contact">
+                    <h2>Contact</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat fugiat dolorem praesentium eos, ab incidunt ratione itaque reiciendis. Nesciunt laborum non hic ut quod sapiente exercitationem officiis veritatis tenetur assumenda.</p>
+                </article>
+                <article class="Links">
+                    <h2>Links</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat fugiat dolorem praesentium eos, ab incidunt ratione itaque reiciendis. Nesciunt laborum non hic ut quod sapiente exercitationem officiis veritatis tenetur assumenda.</p>
+                </article>
+                <article class="Support">
+                    <h2>Support</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat fugiat dolorem praesentium eos, ab incidunt ratione itaque reiciendis. Nesciunt laborum non hic ut quod sapiente exercitationem officiis veritatis tenetur assumenda.</p>
+                </article>
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
