--- a/facilities.html
+++ b/facilities.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -15,30 +12,37 @@
         <div class="wrapper__inner">
             <header class="welcome">
                 <div class="welcome__inner">
-                    <h1>Welcome to Bonzai!</h1>
+                    <h1>Our different facilities</h1>
                 </div>
             </header>
 
             <nav class="menu">
-                <a href="home.html">Home</a>
+                <a href="Home.html">Home</a>
                 <a href="#">Contact</a>
-                <a href="booking.html">Booking</a>
-                <a href="facilities.html">Facilities</a>
+                <a href="Booking.html">Booking</a>
+                <a href="Facilities.html">Facilities</a>
             </nav>
 
             <article class="about">
-                <section class="about__first">
-                    <img src="assets/photos/01-day.jpg" alt="day">
-                    <h2>Day</h2>
+                <section class="about__facilities">
+                    <img src="assets/photos/03-day.jpg" alt="day">
+                    <h2>Beds in heaven</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam qui fuga provident voluptas unde? Et neque perspiciatis, quo asperiores nostrum, fuga illo repudiandae voluptate tenetur, quam exercitationem saepe voluptates accusamus?</p>
                 </section>
-                <section class="about__first">
-                    <img src="assets/photos/01-night.jpg" alt="day">
-                    <h2>Night</h2>
+                <section class="about__facilities">
+                    <img src="assets/photos/07-night.jpg" alt="day">
+                    <h2>Stairs made out of björk</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam qui fuga provident voluptas unde? Et neque perspiciatis, quo asperiores nostrum, fuga illo repudiandae voluptate tenetur, quam exercitationem saepe voluptates accusamus?</p>
                 </section>
-                <section class="about__txt">
-                    <h2>About us</h2>
+                <section class="about__facilities">
+                    <img src="assets/photos/09-day.jpg" alt="">
+                    <h2>Beautiful view</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta molestiae recusandae suscipit architecto temporibus non voluptatum sint sequi nostrum possimus pariatur, consequatur dolorum ex at voluptatem dolorem excepturi mollitia ratione?         
+                    </p>
+                </section>
+                <section class="about__facilities">
+                    <img src="assets/photos/05-night.jpg" alt="">
+                    <h2>Cozy couches</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta molestiae recusandae suscipit architecto temporibus non voluptatum sint sequi nostrum possimus pariatur, consequatur dolorum ex at voluptatem dolorem excepturi mollitia ratione?         
                     </p>
                 </section>
